--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -13,4 +13,14 @@
     <style name="CarsActionBarTitle" parent="V2.Theme.Cars">
         <item name="android:textStyle">normal</item>
     </style>
+
+    <style name="CarsBookingButton" parent="V2.Theme.Cars">
+                <item name="android:gravity">left|center_vertical</item>
+                <item name="android:background">@drawable/itin_button</item>
+                <item name="android:height">60dp</item>
+                <item name="android:textColor">@android:color/white</item>
+                <item name="android:textSize">18sp</item>
+                <item name="android:paddingLeft">25dp</item>
+                <item name="android:drawablePadding">15dp</item>
+            </style>
 </resources>
