--- a/project/src/main/res/layout/widget_lx_detail_section_data.xml
+++ b/project/src/main/res/layout/widget_lx_detail_section_data.xml
@@ -1,32 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.LXDetailSectionDataWidget xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<com.expedia.bookings.widget.LXDetailSectionDataWidget
+    android:id="@+id/section_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:textColor="#000"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title_text"
-        android:layout_marginTop="5dp"
-        android:textColor="#333" />
-
-    <TextView
-        android:id="@+id/read_more"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title_text"
-        android:layout_gravity="bottom|right"
-        android:layout_marginTop="5dp"
-        android:textColor="#333" />
-
-</com.expedia.bookings.widget.LXDetailSectionDataWidget>
+    android:padding="10dp"
+    android:textColor="#333" />
