--- a/project/src/main/res/layout/fragment_new_phone_launch.xml
+++ b/project/src/main/res/layout/fragment_new_phone_launch.xml
@@ -1,27 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
 
-    <!-- ActionBar spacer -->
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <View
-        android:id="@+id/action_bar_space"
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize" />
-
-    <include
-        layout="@layout/section_phone_launch_lob"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/action_bar_space" />
+        android:orientation="vertical">
 
-    <include
-        layout="@layout/widget_launch_nearby_deals"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/drop_shadow" />
+        <!-- ActionBar spacer -->
 
-</RelativeLayout>
+        <View
+            android:id="@+id/action_bar_space"
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize" />
+
+        <include
+            android:id="@+id/lob_selector"
+            layout="@layout/section_phone_launch_lob"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/action_bar_space" />
+
+        <include
+            android:id="@+id/nearby_deals_widget"
+            layout="@layout/widget_launch_nearby_deals"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/lob_selector"
+            android:background="@drawable/drop_shadow" />
+
+    </RelativeLayout>
+</ScrollView>
