--- a/project/src/main/res/layout/section_nearby_hotel_summary.xml
+++ b/project/src/main/res/layout/section_nearby_hotel_summary.xml
@@ -1,30 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.CardView
     android:id="@+id/card_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="160dp"
     card_view:cardCornerRadius="4dp">
 
-    <LinearLayout
+    <com.expedia.bookings.widget.OptimizedImageView
+        android:id="@+id/hotel_background_image"
+        android:layout_width="match_parent"
+        android:layout_height="144dp"
+        android:scaleType="centerCrop" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_gravity="bottom">
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/hotel_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:orientation="vertical">
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/hotel_proximity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/hotel_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#ffffff"
+                android:textSize="22sp" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/hotel_proximity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#ffffff"
+                android:textSize="16sp" />
+        </LinearLayout>
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/hotel_price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:textColor="#ffffff"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
