--- a/project/src/main/res/layout/widget_launch_nearby_deals.xml
+++ b/project/src/main/res/layout/widget_launch_nearby_deals.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
     android:background="#ffffff"
     android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,14 +18,26 @@
         android:textColor="#222222"
         android:textSize="20sp" />
 
+        <TextView
+            android:id="@+id/see_all_hotels_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:textColor="#ffffff"
+            android:background="#1C468D"
+            android:padding="8dp"
+            android:text="SEE ALL" />
+
+    </LinearLayout>
+
     <com.expedia.bookings.widget.NearbyHotelsWidget
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/nearby_hotel_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"/>
 
     </com.expedia.bookings.widget.NearbyHotelsWidget>
 
