--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -7,6 +7,7 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:textColorSecondary">@android:color/white</item>
         <item name="android:colorPrimaryDark">#532C45</item>
+        <item name="android:colorButtonNormal">@color/cars_primary_color</item>
         <item name="colorControlNormal">#C3C3C3</item>
         <item name="android:actionMenuTextColor">#FFFFFF</item>
 
@@ -67,4 +68,13 @@
         <item name="android:textSize">11sp</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
+
+    <style name="CarButton" parent="android:Widget.Button" >
+        <item name="android:background">@color/cars_primary_color</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
+    </style>
+
 </resources>
