--- a/project/src/main/res/layout/widget_car_checkout.xml
+++ b/project/src/main/res/layout/widget_car_checkout.xml
@@ -9,7 +9,7 @@
         android:paddingTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:id="@+id/checkout_scroll"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:fillViewport="true">
 
         <LinearLayout
@@ -150,150 +150,11 @@
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/driver_info_card_view"
-                android:layout_width="match_parent"
-                android:animateLayoutChanges="true"
-                android:layout_height="wrap_content"
-                android:background="#FFF"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                card_view:cardCornerRadius="4dp">
+            <include layout="@layout/cars_login_widget" />
 
-                <com.expedia.bookings.widget.TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="16dp"
-                    android:textSize="18sp"
-                    android:id="@+id/driver_info_text"
-                    android:drawableLeft="@drawable/ic_tablet_checkout_generic_traveler"
-                    android:gravity="center|left"
-                    android:drawablePadding="8dp"
-                    android:text="Enter driver details" />
+            <include layout="@layout/cars_driver_widget"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/driver_info_container"
-                    android:padding="16dp"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <EditText
-                            android:id="@+id/edit_first_name"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:hint="@string/first_name"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:id="@+id/edit_last_name"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:hint="@string/last_name"
-                            android:textSize="16sp" />
-
-                    </LinearLayout>
-
-                    <EditText
-                        android:id="@+id/edit_email_address"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/email_address_hint"
-                        android:textSize="16sp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <com.expedia.bookings.widget.TelephoneSpinner
-                            android:id="@+id/phone_country_code_spinner"
-                            style="@style/Widget.Spinner.Phone"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
-
-                        <EditText
-                            android:id="@+id/edit_phone_number"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="5"
-                            android:hint="@string/phone_number_hint"
-                            android:textSize="16sp" />
-                    </LinearLayout>
-
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/payment_info_card_view"
-                android:layout_width="match_parent"
-                android:animateLayoutChanges="true"
-                android:layout_height="wrap_content"
-                android:background="#FFF"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                card_view:cardCornerRadius="4dp">
-
-                <com.expedia.bookings.widget.TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="16dp"
-                    android:textSize="18sp"
-                    android:drawableLeft="@drawable/ic_tablet_checkout_generic_credit_card"
-                    android:gravity="center|left"
-                    android:id="@+id/payment_info_text"
-                    android:drawablePadding="8dp"
-                    android:text="Enter payment details" />
-
-                <LinearLayout
-                    android:id="@+id/payment_info"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="16dp"
-                    android:orientation="vertical">
-
-                    <EditText
-                        android:id="@+id/edit_credit_card"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="4"
-                        android:hint="@string/credit_card_hint"
-                        android:textSize="16sp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_height="wrap_content">
-
-                        <EditText
-                            android:id="@+id/edit_cvv"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:hint="@string/cvv_hint"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:id="@+id/edit_postal_code"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="2"
-                            android:hint="@string/address_postal_code_hint"
-                            android:textSize="16sp" />
-                    </LinearLayout>
-
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
+            <include layout="@layout/cars_payment_widget"/>
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/legal_information_text_view"
@@ -326,7 +187,7 @@
             slideto:destComplete="@drawable/slide_complete"
             slideto:dragImage="@drawable/slide_drag"
             slideto:sliderBackgroundColor="@color/cars_primary_color"
-            slideto:sliderImage="@drawable/slide_hint"
+            slideto:sliderImage="@drawable/slide"
             slideto:sliderText="@string/cars_slider_text" />
 
         <com.expedia.bookings.widget.TextView
