--- a/project/src/main/res/menu/cars_checkout_menu.xml
+++ b/project/src/main/res/menu/cars_checkout_menu.xml
@@ -7,5 +7,8 @@
         android:icon="@drawable/ic_check_white_24dp"
         app:showAsAction="always"
         android:title="@string/search" />
-
+    <item
+        android:id="@+id/menu_next"
+        app:showAsAction="withText|always"
+        android:title="@string/next" />
 </menu>
