--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -13,4 +13,13 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="V2.Theme.LX.Autocomplete">
+        <item name="android:layout_height">43dp</item>
+        <item name="android:drawablePadding">12dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">5dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">end</item>
+    </style>
 </resources>
