--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -6,4 +6,11 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="DateRadioButton" parent="V2.Theme.LX">
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@drawable/lx_offer_date_selector</item>
+        <item name="android:button">@android:color/transparent</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
