--- a/project/src/main/res/layout/widget_car_confirmation.xml
+++ b/project/src/main/res/layout/widget_car_confirmation.xml
@@ -15,15 +15,6 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"></com.expedia.bookings.widget.OptimizedImageView>
 
-        <ImageView
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="24dp"
-            android:id="@+id/close_image_button"
-            android:src="@drawable/ic_close_white_24dp"></ImageView>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_gravity="center"
@@ -79,6 +70,13 @@
                 android:textColor="@color/itin_white_text"
                 ></com.expedia.bookings.widget.TextView>
         </LinearLayout>
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_gravity="top"
+            android:minHeight="?attr/actionBarSize" />
     </FrameLayout>
 
     <LinearLayout
