--- a/project/src/main/res/values/donottranslate.xml
+++ b/project/src/main/res/values/donottranslate.xml
@@ -463,6 +463,8 @@
     <string name="cars_slider_text">Slide to reserve</string>
     <!-- Text for checkout toolbar-->
     <string name="cars_checkout_text">Checkout</string>
-
-
+    <!-- Text for reserving car-->
+    <string name="cars_reserve_text">Reserve</string>
+    <!-- Text for viewing details-->
+    <string name="cars_view_details_text">View Details</string>
 </resources>
