--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -57,4 +57,14 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="CarsToolbarTitleTextAppearance" parent="V2.Theme.Cars">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <style name="CarsToolbarSubtitleTextAppearance" parent="V2.Theme.Cars">
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
 </resources>
