--- a/project/src/main/res/layout/section_nearby_hotel_summary.xml
+++ b/project/src/main/res/layout/section_nearby_hotel_summary.xml
@@ -2,41 +2,54 @@
 <android.support.v7.widget.CardView
     android:id="@+id/card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="160dp"
-    card_view:cardCornerRadius="4dp">
+    card_view:cardCornerRadius="4dp"
+    card_view:cardPreventCornerOverlap="false">
+
+    <com.expedia.bookings.widget.RoundedCornerFrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="144dp"
+        app:radius="4dp" >
 
     <com.expedia.bookings.widget.OptimizedImageView
         android:id="@+id/hotel_background_image"
         android:layout_width="match_parent"
         android:layout_height="144dp"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"/>
+
+    </com.expedia.bookings.widget.RoundedCornerFrameLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom"
+        android:layout_margin="4dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/hotel_price"
             android:orientation="vertical">
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/hotel_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
                 android:textColor="#ffffff"
-                android:textSize="22sp" />
+                android:textSize="17sp" />
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/hotel_proximity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="#ffffff"
-                android:textSize="16sp" />
+                android:textSize="15sp" />
         </LinearLayout>
 
         <com.expedia.bookings.widget.TextView
@@ -44,8 +57,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:gravity="center_vertical"
             android:textColor="#ffffff"
-            android:textSize="22sp"
+            android:textSize="17sp"
             android:textStyle="bold" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
