--- a/project/src/travelocity/res/layout/tablet_launch_collections_search_layout.xml
+++ b/project/src/travelocity/res/layout/tablet_launch_collections_search_layout.xml
@@ -1,10 +1,22 @@
 <merge>
+
+    <FrameLayout
+        android:id="@+id/tiles_container"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="top"
+        android:paddingTop="?android:actionBarSize"
+        android:layout_marginBottom="@dimen/extra_navigation_bar_padding"
+        android:background="@drawable/bg_tablet_bottom_fade"
+        android:gravity="top|center_horizontal" />
     <LinearLayout
         android:id="@+id/fake_search_bar_container"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="@dimen/tablet_search_width"
         android:layout_height="@dimen/tablet_search_header_height"
+        android:layout_marginTop="?android:actionBarSize"
         android:background="@drawable/bg_search_box"
         android:gravity="center"
         android:layout_gravity="top|center_horizontal"
@@ -23,16 +35,5 @@
             android:textSize="18sp"
             app:textStyle="light" />
     </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/tiles_container"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="@dimen/extra_navigation_bar_padding"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/bg_tablet_bottom_fade"
-        android:gravity="bottom|center_horizontal" />
 
 </merge>
