--- a/project/src/main/res/layout/cars_payment_widget.xml
+++ b/project/src/main/res/layout/cars_payment_widget.xml
@@ -35,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="4"
             android:hint="@string/credit_card_hint"
+            android:singleLine="true"
             android:textSize="16sp" />
 
         <LinearLayout
@@ -46,6 +47,7 @@
                 android:id="@+id/edit_cvv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
                 android:layout_weight="1"
                 android:hint="@string/cvv_hint"
                 android:textSize="16sp" />
@@ -55,6 +57,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
+                android:singleLine="true"
                 android:hint="@string/address_postal_code_hint"
                 android:textSize="16sp" />
         </LinearLayout>
