--- a/project/src/main/res/layout/widget_car_search_params.xml
+++ b/project/src/main/res/layout/widget_car_search_params.xml
@@ -17,8 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:layout_alignParentTop="true"
@@ -29,10 +29,9 @@
                 style="@style/CarAutocomplete"
                 android:layout_width="0dp"
                 android:layout_height="43dp"
-                android:layout_marginLeft="8dp"
                 android:inputType="textNoSuggestions"
                 android:layout_marginBottom="8dp"
-                android:layout_marginRight="4dp"
+                android:layout_marginRight="8dp"
                 android:layout_weight="1"
                 android:completionThreshold="1"
                 android:dropDownAnchor="@+id/location_container"
@@ -45,8 +44,7 @@
                 android:layout_width="0dp"
                 android:layout_height="43dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:hint="@string/same_as_pick_up"
@@ -57,6 +55,7 @@
 
         <ToggleButton
             android:id="@+id/select_date"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:layout_below="@id/location_container"
