--- a/project/src/main/res/layout/cars_driver_widget.xml
+++ b/project/src/main/res/layout/cars_driver_widget.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="@string/first_name"
+                android:singleLine="true"
                 android:textSize="16sp" />
 
             <EditText
@@ -47,6 +48,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:singleLine="true"
                 android:hint="@string/last_name"
                 android:textSize="16sp" />
 
@@ -57,6 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email_address_hint"
+            android:singleLine="true"
             android:textSize="16sp" />
 
         <LinearLayout
@@ -77,6 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:hint="@string/phone_number_hint"
+                android:singleLine="true"
                 android:textSize="16sp" />
         </LinearLayout>
 
